objects/SFDC_Budget__c.object
<CustomObject>
    <description>Allocate multiple requests and claims against a specific budget. Report allocated budget, approved claims, available balance, and unclaimed requests.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a budget to a given account. This is used especially for accrual based MDF.</description>
        <inlineHelpText>Assign the budget to a specific account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Optionally set this value and use subsequently to exclude inactive budgets</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Claims__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of all approved claims. This field is calculated automatically and should not be entered manually.</description>
        <inlineHelpText>Sum of all approved claims. This field is calculated automatically and should not be entered manually.</inlineHelpText>
        <label>Approved Claims</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Requests__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of all approved requests. This field is calculated automatically and should not be entered manually.</description>
        <inlineHelpText>Sum of all approved requests. This field is calculated automatically and should not be entered manually.</inlineHelpText>
        <label>Approved Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Budget__c</fullName>
        <description>Total budget less approved requests</description>
        <formula>Total_Active_Budget__c -  Approved_Requests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grant covers course fees</description>
        <inlineHelpText>Check if Grant covers course fees</inlineHelpText>
        <label>Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Optionally assign an end date to the budget. Frequently used for accrual based budgets</description>
        <inlineHelpText>Optionally assign an end date to the budget. Frequently used for accrual based budgets</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grant Covers registration fees</description>
        <inlineHelpText>Check if grant covers registration fees</inlineHelpText>
        <label>Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Notes__c</fullName>
        <description>Key information regarding grant usage and criteria</description>
        <inlineHelpText>Provide information to help determine purpose and usage of grant</inlineHelpText>
        <label>Grant Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <description>The date &amp; time the budget was last refreshed/ calculated. The budget recalculates when a request or claim is approved, or a previously approved record is rejected</description>
        <label>Last Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>Program Area the grant covers</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aquatics</fullName>
                </value>
                <value>
                    <fullName>FA/CPR</fullName>
                </value>
                <value>
                    <fullName>​​​​​​​NAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Optionally assign a start date to the budget. Frequently used for accrual based budgets</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Active_Budget__c</fullName>
        <description>The total budget summed up from &apos;Active&apos; budget entries</description>
        <inlineHelpText>The total budget summed up from &apos;Active&apos; budget entries</inlineHelpText>
        <label>Total Active Budget</label>
        <summarizedField>SFDC_Budget_Entry__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Budget_Entry__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Budget_Entry__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unclaimed_Budget__c</fullName>
        <formula>Total_Active_Budget__c -  Approved_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unclaimed Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unclaimed__c</fullName>
        <description>The value of total approved requests less total approved claims to date</description>
        <formula>Approved_Requests__c  -  Approved_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unclaimed Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>Coop</fullName>
        <active>true</active>
        <description>Use to fund specific partner account requests and allocations</description>
        <label>Partner Specific Funds</label>
    </recordTypes>
    <recordTypes>
        <fullName>MDF</fullName>
        <active>true</active>
        <description>Use for discretionary training funds.</description>
        <label>General Funds</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_Account_For_MDF_Budget</fullName>
        <active>true</active>
        <description>Requires the MDF budget record not have an account entry. This is used when the user switches the record type to MDF from an accrual record and the record still has the account value.</description>
        <errorConditionFormula>AND( RecordTypeId = &quot;012300000001reS&quot;, LEN( Account__c )&gt;0)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>MDF record types should not reference an account. Please null the account field before saving the record</errorMessage>
    </validationRules>
</CustomObject>